--- a/res/menu/tab_pane.xml
+++ b/res/menu/tab_pane.xml
@@ -1,15 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/menu_add"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="Add"/>
-    <item
-        android:id="@+id/menu_remove"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="Remove"/>
-    <item android:id="@+id/menu_show_hide" android:title="Show/Hide" android:orderInCategory="100" android:showAsAction="never"></item>
-    
+    <item android:id="@+id/menu_file"
+        android:title="@string/menu_item_file" />
+    <item android:id="@+id/menu_edit"
+        android:title="@string/menu_item_edit" />
 </menu>
