--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -12,5 +12,6 @@
         <item>@string/menu_item_undo</item>
         <item>@string/menu_item_redo</item>
         <item>@string/menu_item_find_replace</item>
+        <item>@string/menu_item_find_option</item>
     </array>
 </resources>
