--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,20 +1,15 @@
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
     </style>
 
-    <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <!-- specify actionBarTabTextStyle to avoid uppercase tab-titles -->
+        <item name="android:actionBarTabTextStyle">@style/CustomTabTextStyle</item>
+    </style>
+
+    <style name="CustomTabTextStyle" parent="@android:style/TextAppearance.Holo">
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 
 </resources>
